Replaced call of Collections.unmodifiableList